@@ -1,3 +1,8 @@
+2013-07-05  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* twitter/output.py (TwitterOutputBase): Added checking user
+	  account for sending events to reply tabs (issue #46).
+
 2013-06-30  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* NEWS: 2.3.1 release.
